<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="10dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:text="@string/info"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/info"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="10dp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/control"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:text="@string/control">
        </Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/continuous"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:text="@string/continuous">
            </Button>

            <Button
                android:id="@+id/checkout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:text="@string/checkout">
            </Button>

        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/bottom_panel"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/front_page"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:src="@drawable/front_page"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/booking"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:src="@drawable/booking"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/scan"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="80dp"
                android:src="@drawable/scanner"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:src="@drawable/message"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:src="@drawable/user"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:layout_gravity="center" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>